Set large height on hero name to fix wrapping
This won't work for all 100 character names, but it'll work for the
majority.

--- a/djangoproject/static/scss/_style.scss
+++ b/djangoproject/static/scss/_style.scss
@@ -2946,6 +2946,7 @@ form .footnote {
 			}
 		}
 		.hero-name {
+			height: 92px;
 			vertical-align: top;
 		}
 		.no-logo-hero {
